# ChangeLog for media-sound/sound-juicer
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.17 2004/01/26 23:20:30 foser Exp $

*sound-juicer-0.5.9 (27 Jan 2004)

  27 jan 2004; foser <foser@gentoo.org> sound-juicer-0.5.9.ebuild :
  New release

*sound-juicer-0.5.8 (28 Nov 2003)

  28 nov 2003; foser <foser@gentoo.org> sound-juicer-0.5.8.ebuild :
  New release

  20 Nov 2003; Luca Barbato <lu_zero@gentoo.org> sound-juicer-0.5.7.ebuild:
  Marked ~ppc

*sound-juicer-0.5.7 (15 Nov 2003)

  15 Nov 2003; foser <foser@gentoo.org> sound-juicer-0.5.7.ebuild ;
  New release, removed explicit gst-plugins dep

*sound-juicer-0.5.6 (30 Oct 2003)

  30 Oct 2003; foser <foser@gentoo.org> sound-juicer-0.5.6.ebuild :
  New version

*sound-juicer-0.5.5 (04 Oct 2003)

  04 Oct 2003; foser <foser@gentoo.org> sound-juicer-0.5.5.ebuild :
  New version
  removed flac/lame deps, they're non-essential

  23 Sep 2003; Brad Laue <brad@gentoo.org> sound-juicer-0.5.4.ebuild:
  Add dependency on the newly imported lame/flac gstreamer plugins.

*sound-juicer-0.5.4 (22 Sep 2003)

  22 Sep 2003; <spider@gentoo.org> sound-juicer-0.5.4.ebuild:
  Updated build to avoid some crashes

*sound-juicer-0.5.2 (08 Sep 2003)

  12 Sep 2003; foser <foser@gentoo.org> sound-juicer-0.5.2.ebuild :
  Updated the moved gst-plugins-* deps

  08 Sep 2003; foser <foser@gentoo.org> sound-juicer-0.5.2.ebuild :
  New version, adapted to use the new gst-plugins layout 
  Add mad and oggvorbis USE flags

*sound-juicer-0.5.1 (16 Aug 2003)

  16 Aug 2003; Nick Hadaway <raker@gentoo.org> sound-juicer-0.5.1.ebuild:
  Version bump.  Thanks Jason Oliveira on bug #26704 for being quick on
  the draw with the new release.

*sound-juicer-0.4.1 (04 Jul 2003)

  04 Jul 2003; Alastair Tse <liquidx@gentoo.org> sound-juicer-0.4.1.ebuild:
  version bump

*sound-juicer-0.3-r5 (17 Jun 2003)
