@@ -1,10 +1,8 @@
-MD5 4670776b1ce15bd49ff2c45356b9e407 sound-juicer-0.5.10.1.ebuild 975
-MD5 34d23f6fd23736d03181af0b338bf197 sound-juicer-0.5.7.ebuild 974
-MD5 4670776b1ce15bd49ff2c45356b9e407 sound-juicer-0.5.9.ebuild 975
-MD5 d80d3b35561c06886ed88aa5a65664a3 ChangeLog 2799
+MD5 b49457963b379852ab978fe51b0bf2fa sound-juicer-0.5.10.1.ebuild 978
+MD5 99d6fca2ed570bd55d2e4abcc3970016 sound-juicer-0.5.9.ebuild 974
+MD5 d7b2a3aa7a9af437d00caf76d521b24c ChangeLog 2923
 MD5 b263ff7675308d90b75a170acae3f5ff metadata.xml 177
 MD5 5efd9fd017dc2555e15c39a9ed3ff44e sound-juicer-0.5.8.ebuild 974
 MD5 73375ee8e4adb58f000793d7474bdf23 files/digest-sound-juicer-0.5.10.1 73
-MD5 0ea1b89f09d07838cb9855593a52bc8a files/digest-sound-juicer-0.5.7 70
 MD5 d269c7aff569a6374ae713679dd8531e files/digest-sound-juicer-0.5.8 70
 MD5 be3cfdfab35533fa1943987f4dedd635 files/digest-sound-juicer-0.5.9 70
