@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/Attic/sound-juicer-0.5.7.ebuild,v 1.3 2003/11/28 22:42:34 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/Attic/sound-juicer-0.5.10.1.ebuild,v 1.1 2004/02/06 11:24:22 foser Exp $
 
 inherit gnome2
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.burtonini.com/computing/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="~x86 ~ppc"
 
 IUSE="oggvorbis"
 
@@ -24,7 +24,7 @@ RDEPEND=">=dev-libs/glib-2
 	oggvorbis? ( >=media-plugins/gst-plugins-vorbis-0.6.3 )"
 
 DEPEND="${RDEPEND}
-	>=dev-util/intltool-0.20
+	>=dev-util/intltool-0.29
 	app-text/scrollkeeper
 	dev-util/pkgconfig"
 
