@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/Attic/sound-juicer-0.5.9.ebuild,v 1.1 2004/01/26 23:20:30 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/Attic/sound-juicer-0.5.9.ebuild,v 1.2 2004/02/06 11:24:22 foser Exp $
 
 inherit gnome2
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.burtonini.com/computing/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="x86 ~ppc"
 
 IUSE="oggvorbis"
 
